--- a/public/views/cart/cart.html
+++ b/public/views/cart/cart.html
@@ -9,7 +9,38 @@
 		<!-- Corps de page -->
 		<div class="row">
 
-			CART
+			<table class="table table-hover">
+				<tr>
+					<th>Product Name</th>
+					<th />
+					<th />
+					<th />
+					<th>Unit Price</th>
+					<th>Qty</th>
+					<th>Subtotal</th>
+					<th />
+				</tr>
+				<tr ng-repeat="item in cart" class="media media-middle">
+				  	<td>
+				  		<img data-ng-src="img/{{item.image}}" class="media-object" alt="{{item.name}}" />
+				  	</td>
+				    <td data-ng-bind="item.name"></td>
+				    <td data-ng-bind="item.description"></td>
+				    <td>
+				    	<a href="#">Edit</a>
+				    </td>
+				    <td data-ng-bind="item.price | currency"></td>
+				    <td>
+				    	<input type="text" />
+				    </td>			    
+				    <td>
+				    	<span>0</span>
+				    </td>			    
+				    <td>
+				    	<a href="#"><li class="glyphicon glyphicon-remove" /></a>
+				    </td>
+				</tr>
+			</table>
 
 		</div> 
 
