--- a/public/views/home/home.html
+++ b/public/views/home/home.html
@@ -1,8 +1,8 @@
 <div data-ng-controller="HomeController">
 		<!-- Fil d'ariane -->
 		<ol class="breadcrumb">
-		  <li><a href="#">Home</a></li>
-		  <li><a href="#">His</a></li>
+		  <li><a href="#/">Home</a></li>
+		  <li><a href="#/">His</a></li>
 		  <li class="active">Catalogue</li>
 		</ol>
 
@@ -33,7 +33,7 @@
 				<div class="panel panel-default" id="filter">
 					<div class="panel-heading">
 						<ul class="navbar navbar-right">
-							<a href="#">Hide options</a>
+							<a href="#/">Hide options</a>
 							<span class="glyphicon glyphicon-arrow-down"></span>
 						</ul>
 						<h3 class="panel-title">Panel title</h3>
@@ -62,7 +62,7 @@
 				    <div class="thumbnail">
 				      <img data-ng-src="img/{{shoe.image}}" alt="{{shoe.name}}">
 				      <div class="caption">
-				        <p><a href="#" class="description" data-ng-bind="shoe.description | limitTo:65"></a></p>
+				        <p><a href="#/" class="description" data-ng-bind="shoe.description | limitTo:65"></a></p>
 				        <span class="price" data-ng-bind="shoe.price | currency"></span>
 				        <p><a data-ng-click="addCart(shoe)" class="btn standard-button" role="button">Add to cart</a> <img src="img/2015---TP-WEB---IHM-export_26.png"><img src="img/2015---TP-WEB---IHM-export_30.png"> </p>
 				      </div>
