--- a/public/views/cart/cart.html
+++ b/public/views/cart/cart.html
@@ -1,4 +1,4 @@
-<div data-ng-controller="CartController">
+<div data-ng-controller="CartController" class="container">
 		<!-- Fil d'ariane -->
 		<ol class="breadcrumb">
 		  <li><a href="#">Home</a></li>
@@ -7,7 +7,7 @@
 		</ol>
 
 		<!-- Corps de page -->
-		<div class="row">
+		<div class="table-responsive">
 
 			<table class="table table-hover">
 				<tr>
@@ -37,12 +37,14 @@
 				    	<span>0</span>
 				    </td>			    
 				    <td>
-				    	<a href="#"><li class="glyphicon glyphicon-remove" /></a>
+				    	<a data-ng-click="removeCart(item.id)"><li class="glyphicon glyphicon-remove" /></a>
 				    </td>
 				</tr>
 			</table>
 
 		</div> 
+
+		<div class="alert alert-danger text-center" data-ng-hide="cart.length">You still have an empty cart !</div>
 
 		<!-- Footer -->
 		<nav class="navbar footer">
