--- a/public/views/cart/cart.html
+++ b/public/views/cart/cart.html
@@ -9,7 +9,7 @@
 		<!-- Corps de page -->
 		<div class="table-responsive">
 
-			<table class="table table-hover">
+			<table class="table">
 				<tr>
 					<th>Product Name</th>
 					<th />
@@ -29,11 +29,11 @@
 				    <td>
 				    	<a href="#">Edit</a>
 				    </td>
-				    <td data-ng-bind="item.price | currency"></td>
+				    <td class="price" data-ng-bind="item.price | currency"></td>
 				    <td>
 				    	<input type="text" data-ng-model="item.quantity" data-ng-init="item.quantity='1'" />
 				    </td>			    
-				    <td>
+				    <td class="price">
 				    	<span data-ng-bind="item.price*item.quantity | currency">0</span>
 				    </td>			    
 				    <td>
